--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "license": "MIT",
   "main": "./build/index.js",
   "name": "@lgdweb/common-express-helpers",
+  "private": false,
   "repository": {
     "type": "git",
     "url": "https://github.com/TituxMetal/common-express-helpers.git"
   },
   "types": "./build/index.d.ts",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "scripts": {
     "build": "yarn clean && tsc",
     "clean": "del ./build/*",
