--- a/package.json
+++ b/package.json
@@ -1,55 +1,39 @@
 {
-  "author": "Titux Metal <github@lgdweb.fr>",
+  "author": "Titux Metal (DEV) <github@lgdweb.fr>",
   "description": "Reusable helpers for express server projects",
-  "files": [
-    "build/**/*"
-  ],
   "license": "MIT",
   "main": "./build/index.js",
   "name": "@lgdweb/common-express-helpers",
   "private": false,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/TituxMetal/common-express-helpers.git"
-  },
-  "types": "./build/index.d.ts",
-  "version": "1.0.6",
+  "repository": "https://github.com/TituxMetal/common-express-helpers.git",
+  "types": "./build/index.js",
+  "version": "2.0.0",
+  "files": [
+    "build/**/*"
+  ],
   "scripts": {
-    "build": "yarn clean && tsc",
-    "clean": "del ./build/*",
-    "pub": "yarn version --patch && yarn build && yarn publish",
-    "test": "jest --watch-all"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "coverageDirectory": "<rootDir>/test/report",
-    "coverageReporters": [
-      "text",
-      "html"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "transform": {
-      "^.+\\.(ts)$": "<rootDir>/test/preprocessor.js"
-    }
+    "build": "babel src -d build",
+    "clear": "rm -rf build/*",
+    "prebuild": "yarn clear",
+    "pub": "yarn version --patch && yarn build && yarn publish"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "express-validator": "^6.5.0"
+    "express-validator": "^6.13.0",
+    "http-errors": "^1.8.1",
+    "mongoose": "^6.0.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/preset-typescript": "^7.10.1",
-    "@types/express": "^4.17.6",
-    "@types/jest": "^25.2.3",
-    "babel-jest": "^26.0.1",
-    "del-cli": "^3.0.1",
-    "jest": "^26.0.1",
-    "ts-jest": "^26.1.0",
-    "typescript": "^3.9.3"
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
+    "@babel/preset-env": "^7.16.4",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-watch": "^7.6.0",
+    "eslint": "^8.3.0",
+    "eslint-config-kentcdodds": "^19.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "prettier": "^2.5.0"
   }
 }
