--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": false,
   "repository": "https://github.com/TituxMetal/common-express-helpers.git",
   "types": "./build/index.js",
-  "version": "2.0.0",
+  "version": "2.0.4",
   "files": [
     "build/**/*"
   ],
@@ -15,7 +15,7 @@
     "build": "babel src -d build",
     "clear": "rm -rf build/*",
     "prebuild": "yarn clear",
-    "pub": "yarn version --patch && yarn build && yarn publish"
+    "pub": "yarn build && yarn publish"
   },
   "dependencies": {
     "express": "^4.17.1",
